# cward

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: graphics.h  log.h  mathops.h
src/: CMakeLists.txt  game.cc  game.h  graphics.c  log.c  log.h  main.c  main.cc  mathops.c  mathops.cc  mathops.h  timer.c  timer.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
